add separate toggles for auto-skip categories (#1253)
* check and store individual AutoSkip categories

* auto-skip only checked categories

* updated docs/api.yaml

* remove autoSkipSegments; change autoSkipSegmentCategories to Array

* use chips instead of multiple checkboxes for auto-skip categories

* validate autoSkipSegmentCategories + nit

* nit

* add unit test to validate autoSkipSegmentCategories

* dont trigger wantSponsorBlock if autoSkipSegmentCategories does not change

* fix some linting errors

* simplify autoSkipSegmentCategories unit test

* fix room initialization

* autoSkipSegmentCategories migration consistency
