# docs/api.yaml
@@ -104,8 +104,8 @@ paths:
                           type: array
                           items:
                             type: number
-                      autoSkipSegments:
-                        type: boolean
+                      autoSkipSegmentCategories:
+                        $ref: "#/components/schemas/autoSkipSegmentCategories"
                       users:
                         type: array
                         items:
@@ -165,7 +165,7 @@ paths:
                             - isLoggedIn
                     required:
                       - grants
-                      - autoSkipSegments
+                      - autoSkipSegmentCategories
                       - users
                       - visibility
                       - title
@@ -200,8 +200,8 @@ paths:
                       $ref: "#/components/schemas/visibility"
                     queueMode:
                       $ref: "#/components/schemas/queuemode"
-                    autoSkipSegments:
-                      type: boolean
+                    autoSkipSegmentCategories: 
+                      $ref: "#/components/schemas/autoSkipSegmentCategories"
                     grants:
                       description: Map of role numbers to the bitmask of permissions that role has
                         been granted
@@ -671,6 +671,10 @@ components:
       required:
         - service
         - id
+    autoSkipSegmentCategories:
+      type: array
+      items:
+        type: string
   responses:
     Success:
       description: The operation was successful.
