# server/room.ts
@@ -61,7 +61,7 @@ import storage from "./storage";
 import tokens, { SessionInfo } from "./auth/tokens";
 import { OttException } from "../common/exceptions";
 import { getSponsorBlock } from "./sponsorblock";
-import { ResponseError as SponsorblockResponseError, Segment } from "sponsorblock-api";
+import { ResponseError as SponsorblockResponseError, Segment, Category } from "sponsorblock-api";
 import { VideoQueue } from "./videoqueue";
 import { Counter } from "prom-client";
 import roommanager from "./roommanager";
@@ -71,6 +71,7 @@ import { countEligibleVoters, voteSkipThreshold } from "../common";
 import type { ClientManagerCommand } from "./clientmanager";
 import { canKickUser } from "../common/userutils";
 import { conf } from "./ott-config";
+import { ALL_SKIP_CATEGORIES } from "../common/constants";
 
 /**
  * Represents a User from the Room's perspective.
@@ -167,7 +168,7 @@ const syncableProps: (keyof RoomStateSyncable)[] = [
 	"hasOwner",
 	"voteCounts",
 	"videoSegments",
-	"autoSkipSegments",
+	"autoSkipSegmentCategories",
 	"prevQueue",
 	"restoreQueueBehavior",
 	"enableVoteSkip",
@@ -191,7 +192,7 @@ const storableProps: (keyof RoomStateStorable)[] = [
 	"owner",
 	"_playbackStart",
 	"videoSegments",
-	"autoSkipSegments",
+	"autoSkipSegmentCategories",
 	"prevQueue",
 	"restoreQueueBehavior",
 	"enableVoteSkip",
@@ -224,7 +225,7 @@ export class Room implements RoomState {
 	_owner: User | null = null;
 	grants: Grants = new Grants();
 	userRoles: Map<Role, Set<number>>;
-	_autoSkipSegments = true;
+	_autoSkipSegmentCategories: Array<Category> = Array.from(ALL_SKIP_CATEGORIES);
 	restoreQueueBehavior: BehaviorOption = BehaviorOption.Prompt;
 	_enableVoteSkip: boolean = false;
 
@@ -280,7 +281,7 @@ export class Room implements RoomState {
 				"playbackPosition",
 				"isPlaying",
 				"playbackSpeed",
-				"autoSkipSegments",
+				"autoSkipSegmentCategories",
 				"prevQueue",
 				"restoreQueueBehavior",
 				"enableVoteSkip",
@@ -390,13 +391,13 @@ export class Room implements RoomState {
 		this.markDirty("queueMode");
 	}
 
-	public get autoSkipSegments(): boolean {
-		return this._autoSkipSegments;
+	public get autoSkipSegmentCategories(): Category[] {
+		return this._autoSkipSegmentCategories;
 	}
 
-	public set autoSkipSegments(value: boolean) {
-		this._autoSkipSegments = value;
-		this.markDirty("autoSkipSegments");
+	public set autoSkipSegmentCategories(value: Category[]) {
+		this._autoSkipSegmentCategories = value;
+		this.markDirty("autoSkipSegmentCategories");
 	}
 
 	public get currentSource(): QueueItem | null {
@@ -539,7 +540,7 @@ export class Room implements RoomState {
 			this.currentSource = null;
 		}
 
-		if (this.autoSkipSegments && this.currentSource) {
+		if (this.autoSkipSegmentCategories.length > 0 && this.currentSource) {
 			this.wantSponsorBlock = true;
 		}
 		if (!this.currentSource && this.videoSegments.length > 0) {
@@ -761,7 +762,7 @@ export class Room implements RoomState {
 			);
 		}
 
-		if (this.autoSkipSegments) {
+		if (this.autoSkipSegmentCategories.length > 0) {
 			if (this.wantSponsorBlock) {
 				this.wantSponsorBlock = false; // Disable this before the request to avoid spamming the sponsorblock if the request takes too long.
 				try {
@@ -796,7 +797,7 @@ export class Room implements RoomState {
 				this.dontSkipSegmentsUntil === null
 			) {
 				const segment = this.getSegmentForTime(this.realPlaybackPosition);
-				if (segment) {
+				if (segment && this.autoSkipSegmentCategories.includes(segment.category)) {
 					this.log.silly(`Segment ${segment.category} is now playing, skipping`);
 					this.seekRaw(segment.endTime);
 					await this.publish({
@@ -866,7 +867,7 @@ export class Room implements RoomState {
 			"description",
 			"visibility",
 			"queueMode",
-			"autoSkipSegments",
+			"autoSkipSegmentCategories",
 			"grants",
 			"userRoles",
 			"owner",
@@ -1507,7 +1508,7 @@ export class Room implements RoomState {
 			description: "configure-room.set-description",
 			visibility: "configure-room.set-visibility",
 			queueMode: "configure-room.set-queue-mode",
-			autoSkipSegments: "configure-room.other",
+			autoSkipSegmentCategories: "configure-room.other",
 			restoreQueueBehavior: "configure-room.other",
 			enableVoteSkip: "configure-room.other",
 		};
@@ -1566,6 +1567,21 @@ export class Room implements RoomState {
 			}
 		}
 
+		let autoSkipSegmentCategoriesChanged = false;
+		if (request.settings.autoSkipSegmentCategories) {
+			const autoSkipSegmentCategoriesSet = new Set(
+				request.settings.autoSkipSegmentCategories
+			);
+			if (
+				!_.isEqual(autoSkipSegmentCategoriesSet, new Set(this._autoSkipSegmentCategories))
+			) {
+				request.settings.autoSkipSegmentCategories = ALL_SKIP_CATEGORIES.filter(category =>
+					autoSkipSegmentCategoriesSet.has(category)
+				);
+				autoSkipSegmentCategoriesChanged = true;
+			}
+		}
+
 		// Now that we've checked permissions, it's now safe to apply the settings.
 
 		// apply the simple ones
@@ -1586,7 +1602,12 @@ export class Room implements RoomState {
 		}
 
 		// go grab segments if being enabled while a video is playing
-		if (this.autoSkipSegments && this.videoSegments.length === 0 && this.currentSource) {
+		if (
+			autoSkipSegmentCategoriesChanged &&
+			this.autoSkipSegmentCategories.length > 0 &&
+			this.videoSegments.length === 0 &&
+			this.currentSource
+		) {
 			this.wantSponsorBlock = true;
 		}
 	}
@@ -1628,7 +1649,7 @@ export class Room implements RoomState {
 		this.playbackPosition = 0;
 		this._playbackStart = dayjs();
 		this.videoSegments = [];
-		if (this.autoSkipSegments) {
+		if (this.autoSkipSegmentCategories.length > 0) {
 			this.wantSponsorBlock = true;
 		}
 	}
