# server/storage/room.ts
@@ -104,7 +104,7 @@ function dbToRoomArgs(db: DbRoom): RoomOptions {
 		owner: db.owner,
 		grants: new permissions.Grants(db.permissions),
 		userRoles: new Map<Role, Set<number>>(),
-		autoSkipSegments: db.autoSkipSegments,
+		autoSkipSegmentCategories: db.autoSkipSegmentCategories,
 		prevQueue: db.prevQueue,
 		restoreQueueBehavior: db.restoreQueueBehavior,
 		enableVoteSkip: db.enableVoteSkip,
@@ -130,7 +130,7 @@ export function roomToDb(room: RoomStatePersistable): Omit<RoomAttributes, "id">
 		"description": room.description,
 		"visibility": room.visibility,
 		"queueMode": room.queueMode,
-		"autoSkipSegments": room.autoSkipSegments,
+		"autoSkipSegmentCategories": room.autoSkipSegmentCategories,
 		"permissions": grantsFiltered.toJSON(),
 		"ownerId": null,
 		"role-trusted": [],
@@ -165,7 +165,7 @@ export function roomToDbPartial(
 			description: room.description,
 			visibility: room.visibility,
 			queueMode: room.queueMode,
-			autoSkipSegments: room.autoSkipSegments,
+			autoSkipSegmentCategories: room.autoSkipSegmentCategories,
 			prevQueue: room.prevQueue,
 			restoreQueueBehavior: room.restoreQueueBehavior,
 			enableVoteSkip: room.enableVoteSkip,
